--- a/.github/workflows/advancedworkflow.yml
+++ b/.github/workflows/advancedworkflow.yml
@@ -38,7 +38,7 @@ jobs:
       - name: env variables
         env:
           STEP_VAR: "This is step var"
-      - run: |
+        run: |
           echo $WORKFLOW_VAR
           echo $JOB_VAR
           echo $STEP_VAR
